<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

        <item
            android:id="@+id/menuReconectar"
            android:icon="@drawable/ic_reconectar"
            android:title="@string/menu_reconectar" />
        <item
            android:id="@+id/menuDirecciones"
            android:icon="@drawable/ic_direcciones_round"
            android:title="@string/menu_direcciones" />
        <item
            android:id="@+id/menuMapa"
            android:icon="@drawable/ic_mapa"
            android:title="@string/menu_ver_mapa" />
        <item
            android:id="@+id/menuSalir"
            android:icon="@drawable/ic_salir"
            android:title="@string/menu_salir" />

</menu>
