<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_abstract"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="234dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:contentDescription="@string/descripcion_imagen"
                android:cropToPadding="false"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/textViewBienvenida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/titulo"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/email"
            android:textColor="#fff"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextLoginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/etemail"
            android:inputType="textEmailAddress"
            android:textColor="#fff"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/contraseña"
            android:textColor="#fff"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/etpassword"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonLoginIngresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_contorno"
                android:onClick="loguearme"
                android:text="@string/ingresar"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLoginRegistro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_tiene_cuenta"
                android:textColor="#fff"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonLoginRegistrarse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:background="@drawable/shape_button_contorno"
                android:text="@string/registrarse"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="15dp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>