<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/scene_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageAnonima"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:padding="10dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/cliente_la_anonima" />

        <TextView
            android:id="@+id/descripcionWebService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageAnonima"
            android:text="@string/descripcion"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/detalleWebService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/descripcionWebService"
            android:layout_marginBottom="12dp"
            android:text="@string/detalle"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detalleWebService">

            <TextView
                android:id="@+id/etiquetaDistancia"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/distancia"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/etiquetaDomicilio"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/domicilio"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etiquetaDistancia" />

            <TextView
                android:id="@+id/distanciaWebService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/calculando_distancia"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etiquetaDistancia"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/domicilioWebService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/valor_domicilio"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etiquetaDomicilio"
                app:layout_constraintTop_toBottomOf="@+id/distanciaWebService" />

            <TextView
                android:id="@+id/etiquetaTelefono"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/telefono"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etiquetaDomicilio" />

            <TextView
                android:id="@+id/telefonoWebService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autoLink="phone"
                android:text="@string/valor_telefono"
                android:textColor="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etiquetaTelefono"
                app:layout_constraintTop_toBottomOf="@+id/domicilioWebService" />

            <TextView
                android:id="@+id/etiquetaValor"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/valor"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etiquetaTelefono" />

            <TextView
                android:id="@+id/valorWebService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/valor_deuda"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etiquetaTelefono"
                app:layout_constraintTop_toBottomOf="@+id/telefonoWebService" />

            <TextView
                android:id="@+id/etiquetaTipo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="48dp"
                android:text="@string/tipo"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etiquetaValor" />

            <TextView
                android:id="@+id/tipoWebService"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="48dp"
                android:text="@string/valor_tipo"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/etiquetaValor"
                app:layout_constraintTop_toBottomOf="@+id/valorWebService" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:layout_marginTop="526dp">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>

    </RelativeLayout>

</ScrollView>